--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "dotenv-safe": "^5.0.1",
+    "dotenv-webpack": "^1.5.5",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
