--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^5.0.1",
     "dotenv-safe": "^5.0.1",
+    "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -19,7 +20,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.7.0"
-  }
+  "devDependencies": {}
 }
