--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "dotenv": "^5.0.1",
     "dotenv-safe": "^5.0.1",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
+    "pg-promise": "^8.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
