--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bcrypt": "^2.0.1",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "dotenv-safe": "^5.0.1",
     "eslint-plugin-react": "^7.7.0",
